--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  /* margin-top: 50px; */
   text-align: center;
 }
 
@@ -35,4 +36,44 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.grid {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.grid div {
+  color: navy;
+  width: 160px;
+  height: 200px;
+  padding-top: 20px;
+  margin: 10px;
+  border: 2px solid;
+  border-radius: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: navy;
+}
+
+h1 {
+  color: navy;
+}
+
+table,
+th,
+td {
+  border: 1px solid;
+}
+
+th,
+td {
+  padding: 5px 30px;
+}
+
+table {
+  margin: 20px auto;
 }
